--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .navbarScroll {
-  background: rgba(0, 0, 0, 0.9) !important;
+ background-color: #1a1a1a !important;
 }
 
 /******* HEADINGS HIERARCHY *******/
@@ -63,7 +63,7 @@ h3.card-title {
 }
 
 .navbarDark {
-  background-color: #1a1a1a !important;
+  background-color: #2a2a2a !important;
 }
 
 /* hero background image */
@@ -210,29 +210,6 @@ h3.card-title {
   animation-duration: 20s;
 }
 
-/* portfolio */
-#portfolio h2 {
-  color: #00ddeb;
-}
-#portfolio p {
-  text-align: center;
-}
-
-/* contact */
-
-#contact {
-  color: #00ddeb;
-}
-.contactColumn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.contactColumn i {
-  color: #00ddeb;
-}
-
-/* footer */
 
 @media (max-width: 768px) {
   .e-card {
@@ -280,3 +257,73 @@ h3.card-title {
 .typed .hero_desc::after {
   display: none;
 }
+
+/* portfolio */
+
+/* Portfolio */
+#portfolio .card-img-top {
+  width: 100%;         
+  height: 200px;        
+  object-fit: cover;    
+}
+
+
+#portfolio .card {
+  background-color: #2a2a2a;
+  border: 1px solid #1a1a1a;
+  color: white;
+}
+
+#portfolio .card-title {
+  color: #c488cf !important;
+}
+
+#portfolio .card-text {
+  color: #c9c9c9 !important;
+}
+
+#portfolio .btn {
+  background-color: #c488cf;
+  border-color: #c488cf;
+  color: #1a1a1a;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+
+
+#portfolio .btn:hover {
+  background-color: #00ddeb;
+  border-color: #00ddeb;
+}
+#portfolio h2 {
+  color: #00ddeb;
+}
+#portfolio p {
+  text-align: center;
+}
+
+/* contact */
+
+#contact {
+  color: #00ddeb;
+}
+.contactColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contactColumn i {
+  color: #00ddeb;
+}
+
+/* footer */
+
+
