--- a/style.css
+++ b/style.css
@@ -119,6 +119,35 @@ h3.card-title {
 
 #about .about-content {
   background-color: #2a2a2a;
+  border-radius: 10px;
+}
+.about-photo-container {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+}
+.about-photo {
+  width: 100%;         
+  height: auto;         
+  object-fit: cover;    
+  border-radius: 10px;  
+  display: block;    
+  position: relative;
+  z-index: 2;
+  
+}
+
+.photo-frame {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  width: 416px;
+  height: 377.17px;
+  aspect-ratio: 1 / 1;
+  border: 4px solid #c488cf;
+  border-radius: 10px;
+  z-index: 1;
+
 }
 
 /* skills */
@@ -185,7 +214,7 @@ h3.card-title {
 }
 
 .skill-image {
-  width: 80px !important; /* Ajustement pour les icônes */
+  width: 80px !important;
   height: 80px !important;
   margin-bottom: 15px;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
@@ -257,19 +286,21 @@ h3.card-title {
   display: none;
 }
 
-/* portfolio */
-
 /* Portfolio */
 #portfolio .card-img-top {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  border-radius: 10px 10px 0 0;
+
+
 }
 
 #portfolio .card {
   background-color: #2a2a2a;
   border: 1px solid #1a1a1a;
   color: white;
+  border-radius: 10px;
 }
 
 #portfolio .card-title {
@@ -320,7 +351,11 @@ h3.card-title {
 .contactColumn i {
   color: #00ddeb;
   font-size: 3rem; 
+}
 
+#contact a:hover {
+  transform: scale(1.1);
+  transition: all 0.3s ease;
 }
 
 /* footer */
@@ -332,7 +367,7 @@ footer {
   font-family: 'Votre police d\'écriture', sans-serif;
 }
 
-footer a:hover {
-  transform: scale(1.1);
-  transition: all 0.3s ease;
+.footer-text{
+  background-color: rgba(0, 0, 0, 0.2) ; 
+  border-radius: 10px;
 }
